# pyboilerplate

./: AUTHORS.rst  ChangeLog  LICENSE  README.rst  setup.cfg  setup.py
boilerplate/: __main__.py  boilerplate_cli.py
tests/: test_boilerplate.py
